[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-audiotrigger"
description = "Code for handling TunableLaser's audio safety system."
license = { text = "GPL" }
dependencies = []
readme = "README.rst"
urls = { documentation = "https://ts-audiotrigger.lsst.io", source_code = "https://github.com/lsst-ts/ts_audiotrigger"}
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "python" ]

[tool.setuptools_scm]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
run_audiotrigger = "lsst.ts.audiotrigger:execute_runner"

[project.optional-dependencies]
dev = ["documenteer[pipelines]"]
